Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.2, 5.12.10, 5.15.2, 6.0.0
-
42d411e2e80c434f3e62cc55e32da2eeaa6149ae (qt/qtdeclarative/dev) bab9a16601f2750bf5607929d98a7f434574e09e (qt/qtdeclarative/6.2)
Description
When showing a context menu for a TextField then it will lose the selection instead of keeping it. This does not happen with Qt Quick Controls 1 and using persistentSelection is not an option because that will make it look selected in all TextFields with this set on.
Attachments
Issue Links
- is duplicated by
-
QTBUG-73807 TextEdit selection is cleared when opening a Copy/Paste context menu
-
- Closed
-
- relates to
-
QTBUG-69558 Implement support for native Popups and Menus
-
- Open
-
For Gerrit Dashboard: QTBUG-71723 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
253251,5 | WIP: Fix text edit selections being lost upon opening a context menu | 5.12 | qt/qtquickcontrols2 | Status: NEW | -2 | 0 |